# knoop

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
metaconfigure/: description.json
src/: Knoop.hpp  knoop.hpp  temp
src/Knoop/: Node.hpp
src/Knoop/Node/src/: bracketOperator.hpp  ctor.hpp  equalityOperator.hpp  get.hpp  insert.hpp  keys.hpp  list.hpp  push_back.hpp  push_front.hpp  put.hpp  values.hpp
src/Knoop/Node/test/: CMakeLists.txt  Node.test.cpp  assignment.test.cpp  ctor.test.cpp  example.cpp  get.test.cpp  list.test.cpp  map.test.cpp
src/knoop/: Node.hpp
src/knoop/Node/src/: back.hpp  begin.hpp  bracketOperator.hpp  contains.hpp  ctor.hpp  end.hpp  erase.hpp  front.hpp  get.hpp  insert.hpp  keys.hpp  list.hpp  pop_back.hpp  pop_front.hpp  push_back.hpp  push_front.hpp  put.hpp  values.hpp
src/knoop/Node/test/: CMakeLists.txt  Node.test.cpp  assignment.test.cpp  ctor.test.cpp  derived.test.cpp  example.cpp  get.test.cpp  list.test.cpp  map.test.cpp
src/t/Node/src/: assignmentOperator.hpp  contains.hpp  ctor.hpp  insert.hpp  pop_back.hpp  push_front.hpp
src/t/Node/test/: assignment.test.cpp  ctor.test.cpp  list.test.cpp  map.test.cpp
src/test/: CMakeLists.txt  example1.cpp  nestedExample.cpp
